<resources>
    <string name="app_name">Vinter Tests</string>
    <string name="copyright">&#169;&#160;2016&#160;&#160;pbluedotsoft@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done_button">SPARA</string>
    <string name="test_saved_complete">Sparat. Test komplett.</string>
    <string name="test_saved_incomplete">Sparat. Test <b>EJ</b> komplett.</string>
    <string name="login_no_account_yet">No account yet? Register</string>
    <string name="login_already_registered">Already registered? Log in</string>
    <string name="valid_characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789äåö</string>
    <string name="valid_characters_plus_blank">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789äåö</string>
    <string name="test_list_activity_manual"><![CDATA[<h1>Tester sjukgymnastiken/fysioterapin</h1><u>Självskattning</u><br/>EQ5D (ska göras på alla patienter)<br/>VAS (ska göras på alla patienter)<br/>FSS<br/>IPAQ<br/>Borgs ansträngningsskala<br/>Borgs smärtskala<br/><br/><u>Gångtester</u><br/>TUG<br/>6 min gångtest (görs på samtliga patienter som kan gå)<br/><br/><u>Balanstester</u><br/>Bergs balanstest<br/>BDL<br/>IMF<br/><br/><u>Tester rörlighet</u><br/>FSA<br/>Ledstatus<br/><br/><u>Konditionstest</u><br/>Ergometercykeltest<br/><br/><u>Ryggreumatiska tester</u><br/>BAS-MI<br/>BAS-DAI<br/>BAS-FI<br/>BAS-GI<br/>Bechterew status<br/><br/><u>Muskeltester</u><br/>TST<br/>Ashworth skalan<br/>Myositstatus<br/>IMF<br/><br/><u>Övriga tester</u><br/>Smärtteckning<br/><br/><br/><b>Obligatoriska tester på reumatiska patienter från Stockholms läns landsting, Västra Götaland och Halland</b><p>6-minuters gångtest<br/>Ergometri cykeltest(Åstrands cykeltest)<br/>Timed stands test<br/>Timed up and go<br/>EQ5-D<br/>I-PAQ<br/>VAS - trötthet<br/>VAS - generell hälsa<br/>VAS - smärta<br/><br/>Vid ryggsjukdomar görs även nedanstående test<br/><br/>BASMI<br/>BASFI<br/>BASDAI<br/>BAS-G<br/>Ott i flexion och extension<br/>Thoraxexkursion</p>]]></string>
    <string name="bergs_string_q1"><b>1. Sittande till stående</b>\nInstruktion: <i>Ställ Dig upp. Försök att inte använda händerna som stöd.</i>\nFör att få 2 poäng får patienten göra fler än ett försök i detta moment.</string>
    <string name="bergs_string_q2"><b>2. Stå utan stöd</b>\nInstruktion: <i>Stå i 2 minuter utan stöd.</i>\nFör att få 1 poäng får patienten göra fler än ett försök i detta moment.</string>
    <string name="bergs_string_om_patienten"><b><i>Om patienten kan stå 2 minuter utan stöd: sätt full poäng för ”sitta utan ryggstöd” och fortsätt till uppgift 4.</i></b></string>
    <string name="bergs_string_q3"><b>3. Sitta utan ryggstöd med stöd for fötterna på golv eller pall</b>\nInstruktion: <i>Sitt med korslagda armar i 2 minuter.</i>\nOm patienten inte förstår att han/hon inte ska luta mot ryggstödet bör detta moment utföras där ryggstöd saknas, exempelvis i sängen.</string>
    <string name="bergs_string_q4"><b>4. Stående till sittande</b>\nInstruktion: <i>Sätt Dig.</i></string>
    <string name="bergs_string_q5"><b>5. Från sittande på en stol med armstöd till en annan utan armstöd och vice versa </b>\nInstruktion: Undersökaren placerar en stol med armstöd i 90° vinkel mot en stol utan armstöd eller mot en säng.\n<i>Flytta Dig från stolen med armstöd till stolen utan armstöd/sängen. Använd händerna så lite som möjligt. Flytta dig sedan från stolen (utan armstöd)/sängen till stolen med armstöd.</i>\nOm patienten inte kan flytta sig åt båda hällen kan undersökaren flytta stolen efter den första överflyttningen. Det viktiga är att överflyttningen sker från en stol med armstöd och från en stol utan armstöd/säng.</string>
    <string name="bergs_string_q6"><b>6. Stå utan stöd med slutna ögon\n</b>Instruktion: <i>Blunda och stå stilla i 10 sekunder.</i></string>
    <string name="bergs_string_q7"><b>7. Stå utan stöd med fötterna intill varandra\n</b>Instruktion: <i>Sätt fötterna intill varandra och stå utan stöd.</i></string>
    <string name="bergs_string_q8"><b>8. Sträcka sig framåt med utsträckt arm i stående\n</b>Instruktion: <i>Lyft armen framåt till 90 grader. Sträck ut fingrarna och sträck Dig framåt så långt Du kan.</i> Undersökaren fäster eller håller en linjal, alternativt ett papper markerar med noll-läge och 5, 12, 25 cm mot väggen. Noll-läget ska var jäms med långfingrets fingertopp då armen är framsträckt i 90 grader. Fingrarna eller armen får inte nudda vid väggen. Mät på linjalen hur långt fingertoppen når i det mest framsträckta läget. När det är möjligt ska patienten använda båda armarna vid framåtsträckningen för att undvika rotation av bålen.</string>
    <string name="bergs_string_q9"><b>9. Stå och ta  upp föremal från golv\n</b>Instruktion: <i>Ta upp sko/toffel som ligger framför Dina fötter.</i></string>
    <string name="bergs_string_q10"><b>10. Vrida och titta bakåt över vänster och höger axel i stående\n</b>Instruktion: <i>Vrid och titta direkt bakom Dig över vänster axel. Upprepa åt höger.</i> För att en bra rotation i hela kroppen kan undersökaren stå bakom patienten och hålla ett föremål som patienten uppmuntras att titta på.</string>
    <string name="bergs_string_q11"><b>11. Vända 360 grader</b>\nInstruktion: <i>Vänd Dig runt ett helt varv. <u>Stanna</u>. Vänd Dig sedan ett helt varv åt andra hållet.</i></string>
    <string name="bergs_string_q12"><b>12. Stå utan stöd och växelvis placera fot på pall</b>\nInstruktion: <i>Sätt växelvis upp en fot i taget på pallen/trappsteget. Fortsätt tills vardera foten har rört vid pallen 4 gånger.</i></string>
    <string name="bergs_string_q13"><b>13. Stå utan stöd med den ena foten framför den andra\n</b>Instruktion: <u>Demonstrera för patienten</u>. <i>Sätt ena foten direkt framför den andra. Om Du inte kan sätta foten direkt framför, försök att sätta foten så långt fram att hälen på Din främre fot är framför den andra fotens tår.</i>\nFör att få 3 poäng måste den främre fotens häl placeras framför den bakre fotens tår och stegets bredd ska vara ungefär som patientens normala stegbredd.</string>
    <string name="bergs_string_q14"><b>14. Stå på ett ben</b>\nInstruktion: <i>Stå på ett ben så länge Du kan utan stöd.</i></string>
    <string name="bergs_manual"><![CDATA[<h1>Bergs balansskala</h1><h2>Instruktion</h2><p>Visa och förklara för patienten före varje moment som han/hon ska utföra. Det är det <b>första försöket</b> som ska poängsättas. Det är därför mycket viktigt att patienten från början får all den information som behövs så att han/hon förstår vad som ska göras. Ge information på ett naturligt sätt och använd den skrivna instruktioner till varje moment endast som utgångspunkt. </p><h2>Poängsättning </h2><p>I många moment ska patienten bibehålla en given under en viss tid. Du ger gradvis en lägre poäng om de olika kriterierna för tid och avstånd inte uppfylls, om patienten kräver tillsyn eller om hon/han tar stöd eller behöver hjälp av en person. Med tillsyn menas att du känner att du måste vara beredd att ge stöd eftersom det finns risk att patienten ska tappa balansen. Med stöd och hjälp menas fysisk kontakt mellan patienten och ett stadigt föremål eller en person. </p><p>Patienten väljer själv vilket ben hon/han vill stå på eller hur långt hon/han vill sträcka sig framåt. Det innebär exempelvis i moment 8 att patienten får noll poäng om hon/han sträcker sig för långt fram och tappar balansen. Patientens insikt om sin förmåga påverkar således utförandet och därigenom poängsättningen. Om du är tveksam vilken poäng som bäst motsvarar det som patienten klarar av ska du alltid välja <b>det lägre alternativet</b>. Det innebär att patienten åtminstone klarar den poängen, men inte den närmast högre.</p><h2>Utrustning</h2><p>- Ett tidtagarur eller en klocka med sekundvisare<br/>- En linjal eller annat föremål (exempelvis baksidan av skattningsformuläret) markerat med ett noll-läge samt 5, 12 och 25 cm<br/>- Sko eller toffel<br/>- Stol i standardhöjd med armstöd samt en stol utan armstöd eller säng<br/>- Ett steg i en trappa eller en pall med motsvarande steghöjd</p><h2>Dokumentation</h2><p>Vid upprepad bedömning är det mycket viktigt att du <b>inte</b> ser resultatet av den tidigare bedömningen. Om du ser den poäng som patienten fått vid en tidigare skattning finns risk att du påverkas i din poängsättning. Under testproceduren markerar du direkt i skattningsformuläret det poäng som motsvarar patientens resultat. För sedan över testresultatet på formuläret för upprepade mätningar.</p>]]></string>
    <string name="bdl_string_q1"><b>1. Stå med fötterna ihop, blundande</b>\nPatienten står med fötterna parallellt, tätt ihop, armarna hängande intill kroppen. Tid tas från det att patienten sluter ögonen. Fötterna får ej flyttas ur position.</string>
    <string name="bdl_string_q2"><b>2. Stå på ett ben, seende</b>\nPatienten står på ett ben. Belastad fot får ej flyttas ur position. Underben och fot obelastad sida ska ej vila mot stödben. Övning 2a och 2b får utföras i valfri ordning.</string>
    <string name="bdl_string_q3"><b>3. Stående på ett ben, blundande</b>\nPatienten lyfter benet, sluter sedan ögonen. Belastad fot får ej flyttas ur position. Underben och fot på obelastad sida ska ej vila mot stödben. Står på sämsta benet från övning 2. Tid tas från att patienten blundar och har lyft benet.</string>
    <string name="bdl_string_q4"><b>4. Gå på linje, framlänges</b>\nPatienten ombeds gå 15 steg fram och tillbaka, på en 5cm bred linje. Tandemgång, häl mot tå, både tå- och hälparti ska vidröra linjen. Någon del av foten (hö och vä) skall vara på linjen under vändningen. Sjukgymnasten räknar stegen högt.</string>
    <string name="bdl_string_q5"><b>5. Gå baklänges</b>\nPatienten ombeds gå 15 steg baklänges mellan två linjer, 20 cm mellanrum mellan  linjerna. Tandemgång, tå mot häl. Patienten får ej vidröra linjerna. Sjukgymnasten räknar stegen högt.</string>
    <string name="bdl_string_q6"><b>6. Gå med kaffekopp</b>\nPatienten ombeds gå 5 m, vända och gå tillbaka inom ett 20 cm brett  område. Patienten håller i ena handen ett kaffefat med kopp fylld till 1,5 cm från kanten. Patienten få ej vidröra linjerna förutom vid vändningen. Under vändningen skall en fot vara inom markerat område. Kaffe får ej rinna över kanten.</string>
    <string name="basfi_markera">Markera på varje linje din förmåga <u>den senaste veckan</u> i samtliga aktiviteter\n\n<b>Obs!</b> Som hjälpmedel räknas alla typer av redskap som underlättar en aktivitet</string>
    <string name="basfi_q1">1. Ta på strumpor eller strumpbyxor utan hjälpmedel (t ex strumppåtagare)</string>
    <string name="basfi_q2">2. Plocka upp en penna från golvet utan hjälpmedel och utan att ta stöd med hand eller knä</string>
    <string name="basfi_q3">3. Nå upp till en hylla ovan huvudhöjd utan hjälp eller hjälpmedel</string>
    <string name="basfi_q4">4. Resa Dig från en köksstol utan att använda händerna eller annan hjälp</string>
    <string name="basfi_q5">5. Resa Dig från ryggliggande på golvet</string>
    <string name="basfi_q6">6. Stå utan stöd i 10 minuter utan obehag</string>
    <string name="basfi_q7">7. Gå uppför 12-15 trappsteg utan att använda handstöd. En fot på varje steg</string>
    <string name="basfi_q8">8. Titta över axeln utan att vrida kroppen</string>
    <string name="basfi_q9">9. Utföra fysiskt krävande aktiviteter (t ex sjukgymnastisk träning, trädgårdsarbete eller sport)</string>
    <string name="basfi_q10">10. Vara aktiv en hel dag, hemma eller på arbetet</string>
</resources>