<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/basfi_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/test_background_color"
            tools:context="com.example.android.vinter_1.TestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/basfi_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="90"
                android:gravity="center"
                android:text="IN test"
                android:textAppearance="@style/TextCustomLarge"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/basfi_fab_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:clickable="true"
                android:src="@drawable/ic_comment_white_24dp"
                app:fabSize="mini"/>
        </LinearLayout>

        <!-- Separator -->
        <View
            android:id="@+id/basfi_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="30dp"
            android:background="@color/bgBrightIn"/>

        <TextView
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basfi_markera"/>

        <TextView
            android:id="@+id/basfi_q1"
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_questions"
            android:text="@string/basfi_q1"/>

        <SeekBar
            android:id="@+id/basfi_slider1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_question_slider"
            android:max="20"
            android:progress="0"/>

        <!-- Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Lätt"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Omöjligt"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/basfi_q2"
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_questions"
            android:text="@string/basfi_q2"/>

        <SeekBar
            android:id="@+id/basfi_slider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_question_slider"
            android:max="20"
            android:progress="0"/>

        <!-- Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Lätt"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Omöjligt"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/basfi_q3"
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_questions"
            android:text="@string/basfi_q3"/>

        <SeekBar
            android:id="@+id/basfi_slider3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_question_slider"
            android:max="20"
            android:progress="0"/>

        <!-- Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Lätt"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Omöjligt"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/basfi_q4"
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_questions"
            android:text="@string/basfi_q4"/>

        <SeekBar
            android:id="@+id/basfi_slider4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_question_slider"
            android:max="20"
            android:progress="0"/>

        <!-- Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Lätt"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Omöjligt"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/basfi_q5"
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_questions"
            android:text="@string/basfi_q5"/>

        <SeekBar
            android:id="@+id/basfi_slider5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_question_slider"
            android:max="20"
            android:progress="0"/>

        <!-- Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Lätt"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Omöjligt"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/basfi_q6"
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_questions"
            android:text="@string/basfi_q6"/>

        <SeekBar
            android:id="@+id/basfi_slider6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_question_slider"
            android:max="20"
            android:progress="0"/>

        <!-- Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Lätt"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Omöjligt"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/basfi_q7"
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_questions"
            android:text="@string/basfi_q7"/>

        <SeekBar
            android:id="@+id/basfi_slider7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_question_slider"
            android:max="20"
            android:progress="0"/>

        <!-- Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Lätt"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Omöjligt"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/basfi_q8"
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_questions"
            android:text="@string/basfi_q8"/>

        <SeekBar
            android:id="@+id/basfi_slider8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_question_slider"
            android:max="20"
            android:progress="0"/>

        <!-- Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Lätt"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Omöjligt"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/basfi_q9"
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_questions"
            android:text="@string/basfi_q9"/>

        <SeekBar
            android:id="@+id/basfi_slider9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_question_slider"
            android:max="20"
            android:progress="0"/>

        <!-- Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Lätt"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Omöjligt"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/basfi_q10"
            style="@style/TextCustomNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_questions"
            android:text="@string/basfi_q10"/>

        <SeekBar
            android:id="@+id/basfi_slider10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basfi_margin_question_slider"
            android:max="20"
            android:progress="0"/>

        <!-- Labels -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Lätt"
                android:textAppearance="?android:textAppearanceMedium"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Omöjligt"
                android:textAppearance="?android:textAppearanceMedium"
                />
        </LinearLayout>

        <!-- Result -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <TextView
                style="@style/TextCustomLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="BASFI (0-10p, 0p = ua)"/>

            <TextView
                android:id="@+id/basfi_result"
                style="@style/OutputTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:ems="3"
                android:gravity="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/basfi_btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@drawable/spara_custom_button"
            android:text="@string/done_button"
            android:textAppearance="@style/TextCustomNormal"
            android:textColor="@android:color/white"/>


    </LinearLayout>
</ScrollView>